--- a/CV_Clement_Hottier_prive.tex
+++ b/CV_Clement_Hottier_prive.tex
@@ -120,17 +120,25 @@
   \pointskill{\flag{ES.png}}{Espagnol}{1}
 
   \profilesection{Programmation}
-  \barskill{}{ADQL/SQL}{85}
-  \barskill{}{Python : numpy/scipy/pandas}{95}
-  \barskill{}{Java}{90}
+  \barskill{\faIcon{database}}{ADQL/SQL}{85}
+  \barskill{\faPython}{Python : numpy/scipy/pandas}{95}
+  \barskill{\faCoffee}{Java}{90}
   \barskill{}{Fortran/C}{70}
-  \barskill{}{Bash}{85}
+  \barskill{\faIcon{linux}}{Bash}{85}
   \barskill{}{Cluster computing (slurm)}{95}
-  \barskill{}{Git}{75}
-  \barskill{}{Docker}{60}
+  \barskill{\faIcon{code-branch}}{Git/SVN}{75}
+  \barskill{\faDocker}{Docker}{60}
 
 }
 
+\addtobacksidebar{
+	\profilesection{Centre d'intérêts}
+  \skill{}{Micro ordinateur et controleur}
+  \skill{}{Drone FPV}
+  \skill{}{Trek et Randonnée}
+  \skill{}{Couture}
+  \skill{}{Cuisine}
+}
 %-------------------------------------------------------------------------------
 %                         TABLE ENTRIES RIGHT COLUMN
 %-------------------------------------------------------------------------------
@@ -140,7 +148,7 @@
 
 \cvsection{Expériences Professionnelles}
 \begin{cvtable}
-  \cvitem{2021-}{Observatoire de Paris - CNES}{}{
+  \cvitem{2021-2022}{Observatoire de Paris - CNES}{}{
 % Conception, implémentation, test et documentation d'une librairie d'exploration et de visualisation de cube densité adapté à l'astronomie (python3 OO : matplotlib/scipy/numpy/h5py/healpy)}
     Conception d'une bibliothèque d'exploration de données 3D:
     \begin{itemize}[noitemsep,nolistsep,leftmargin=*]
@@ -215,31 +223,6 @@
   % réionisation}
 \end{cvtable}
 
-%\cvsection{Expériences d'enseignement}
-%\subsection{Universitaire}
-%\begin{cvtable}
- % \cvitem{2016-2020}{Cours Magistraux et Travaux dirigés}{Observatoire de Paris}{
- % Programmation Scientifique - Programmation Latex - Mécanique Quantique}
-  
- % \cvitem{2016-2020}{Stage d'observation}{Observatoire de Paris/Univ Paris-Saclay}
- % {- Encadrement d'observations sur instruments professionnels\\
- %  - Développement de la boîte à outils de réduction des données et distribution en package
- %python et image Docker}
-%\end{cvtable}
-
-%\subsection{Médiation scientifique}
-%\begin{cvtable}
-%  \cvitem{2020}{\textbf{Conférence de Presse Gaia EDR3}}{\href{https://youtu.be/kOLjv-9lsmA?t=2145}
-%    {\underline{Com Obs.Paris}}}{}
-%  \cvitem{2020}{Fête de la science à
-%  l'Observatoire}{\href{https://youtu.be/r70a8Ztte4w}{\underline{Youtube Live}}}{Gaia : Le plus vaste
-%catalogue d'étoiles}
-%  \cvitem{2019}{Conférence étoiles en
-%  scène}{\href{https://www.obspm.fr/etoiles-en-scene-au-grand-rex.html}{\underline{Com Obs. Paris}}}{Conférence express au Grand Rex}
-%  \cvitem{2018}
-%  {Conférence Pint of science}
-%  {\href{https://pintofscience.fr/}{\underline{Pint of science France}}}{La mission spatiale Gaia}
-%\end{cvtable}
 
 \cvsection{Responsabilités Administratives et Structurantes}
 \begin{cvtable}
@@ -254,8 +237,21 @@ l'Observatoire de Paris :
   \cvitemshort{2017-2019}{Représentant des étudiants de l'Observatoire de
   Paris au conseil d'administration (CA), au conseil de l'Unité Formation-Enseignement (CUFE)
 et au conseil de la documentation (CDOC)}
+\end{cvtable}
 
+\newpage
+\makebacksidebar
 
+\cvsection{Formations}
+\begin{cvtable}
+\cvitem{2021}{\textbf{Machine learning en python}}{CNRS - ifsem}{}
+\cvitem{2018}{\textbf{Docker}}{Observatoire de Paris - IN2P3}{}
+\cvitem{2017}{\textbf{Python Avancé}}{Observatoire de Paris}{}
+  \cvitem{2016-2019}{\textbf{Doctorat} (\href{https://tel.archives-ouvertes.fr/tel-02879238/document}{Manuscrit
+  en ligne})}{Observatoire de Paris}{}
+  \cvitem{2014-2016}{Master}{Observatoire de Paris}{Dynamique des systèmes gravitationnels}
+  % \cvitem{2014-2015}{Master 1}{Observatoire de Paris}{Sciences de L'univers et technologies spatiales}
+  % \cvitem{2011-2014}{Licence}{Université Lille 1}{Physique fondamentale}
 \end{cvtable}
 
 \cvsection{Communications}
@@ -285,18 +281,30 @@ et au conseil de la documentation (CDOC)}
   {}
 \end{cvtable}
 
-
-
-
-\cvsection{Formations}
+\cvsection{Expériences d'enseignement}
+\subsection{Universitaire}
 \begin{cvtable}
-\cvitem{2021}{\textbf{Machine learning en python}}{CNRS - ifsem}{}
-\cvitem{2018}{\textbf{Docker}}{Observatoire de Paris - IN2P3}{}
-\cvitem{2017}{\textbf{Python Avancé}}{Observatoire de Paris}{}
-  \cvitem{2016-2019}{\textbf{Doctorat} (\href{https://tel.archives-ouvertes.fr/tel-02879238/document}{Manuscrit
-  en ligne})}{Observatoire de Paris}{}
-  \cvitem{2014-2016}{Master}{Observatoire de Paris}{Dynamique des systèmes gravitationnels}
-  % \cvitem{2014-2015}{Master 1}{Observatoire de Paris}{Sciences de L'univers et technologies spatiales}
-  % \cvitem{2011-2014}{Licence}{Université Lille 1}{Physique fondamentale}
+  \cvitem{2016-2020}{Cours Magistraux et Travaux dirigés}{Observatoire de Paris}{
+  Programmation Scientifique - Programmation Latex - Mécanique Quantique}
+  
+  \cvitem{2016-2020}{Stage d'observation}{Observatoire de Paris/Univ Paris-Saclay}
+  {- Encadrement d'observations sur instruments professionnels\\
+   - Développement de la boîte à outils de réduction des données et distribution en package
+ python et image Docker}
 \end{cvtable}
+
+\subsection{Médiation scientifique}
+\begin{cvtable}
+  \cvitem{2020}{\textbf{Conférence de Presse Gaia EDR3}}{\href{https://youtu.be/kOLjv-9lsmA?t=2145}
+    {\underline{Com Obs.Paris}}}{}
+  \cvitem{2020}{Fête de la science à
+  l'Observatoire}{\href{https://youtu.be/r70a8Ztte4w}{\underline{Youtube Live}}}{Gaia : Le plus vaste
+catalogue d'étoiles}
+  \cvitem{2019}{Conférence étoiles en
+  scène}{\href{https://www.obspm.fr/etoiles-en-scene-au-grand-rex.html}{\underline{Com Obs. Paris}}}{Conférence express au Grand Rex}
+  \cvitem{2018}
+  {Conférence Pint of science}
+  {\href{https://pintofscience.fr/}{\underline{Pint of science France}}}{La mission spatiale Gaia}
+\end{cvtable}
+
 \end{document}% FortySecondsCV LaTeX template
