--- a/CV_Clement_Hottier_prive.tex
+++ b/CV_Clement_Hottier_prive.tex
@@ -134,7 +134,7 @@
 }
 
 \addtobacksidebar{
-	\profilesection{Centre d'intérêts}
+	\profilesection{Centres d'intérêt}
   \skill{}{Micro ordinateur et controleur}
   \skill{}{Drone FPV}
   \skill{}{Trek et Randonnée}
@@ -152,22 +152,22 @@
 \begin{cvtable}
   \cvitem{2021-2022}{Observatoire de Paris - CNES}{}{
 % Conception, implémentation, test et documentation d'une librairie d'exploration et de visualisation de cube densité adapté à l'astronomie (python3 OO : matplotlib/scipy/numpy/h5py/healpy)}
-    Conception d'une bibliothèque d'exploration de données 3D:
+    Conception d'une bibliothèque d'exploration de données 3D :
     \begin{itemize}[noitemsep,nolistsep,leftmargin=*]
-      \item Implémentation en python3 orienté objet en utilisant matplotlib, scipy, numpy
-      \item Optimisation de l'usage mémoire par chargement partiel (h5py)
-      \item implémentation de la prise charge des healpix (healpy)
+      \item Implémentation en Python 3 orienté objet en utilisant matplotlib, scipy, numpy
+      \item Optimisation de l'usage mémoire par chargement partiel des données (h5py)
+      \item Implémentation de la prise charge des healpix (healpy)
     \end{itemize}
-    Conception d'algorithme de
-  tomographie 3D (python3 scipy,numpy)}
+    Conception d'un algorithme de
+  tomographie 3D (Python 3 scipy,numpy)}
   
   \cvitem{2019-2020}{Observatoire de Paris-UFE/GEPI}{}{
     Exploitation de cube 3D de densité :
     \begin{itemize}[noitemsep,nolistsep,leftmargin=*]
-      \item Indexation de données en SQLite3 et stockage des données brute en HDF5 (python3:h5py et Java:JHDF5)
+      \item Indexation de données en SQLite3 et stockage des données brutes en HDF5 (Python 3:h5py et Java:JHDF5)
       \item Implémentation d'un algorithme de segmentation en Python 3 (orienté objet, numpy,
         scipy, numba)
-      \item Mise a disposition de données réduite et catalogue (Table fits, Table VO)
+      \item Mise à disposition de données réduites et catalogue (Table fits, Table VO)
     \end{itemize}
     % - Exploration de données et identification croisée de structures (Python 3 :
     % matplotlib/pandas)\\
@@ -175,7 +175,7 @@
     % - Administration de données brute (HDF5 ; python3:h5py et Java:JHDF5)\\
     % - Implémentation d'algorithme de classification et création de catalogues (Python3 OO : numpy/scipy/numba)\\
     % - Création de la boite à outils de réduction d'image CCD et spectroscopie pour stage d'observation à l'OHP (python3 : astropy/numpy/matplotlib) Documentation (markdown) Distribution de la librairie en image docker et paquet python.
-    Développement de la chaine de traitement de données pour les stage OHP (python3):
+    Développement de la chaîne de traitement de données pour les stages OHP (Python 3):
     \begin{itemize}[noitemsep,nolistsep,leftmargin=*]
       \item Réduction des images CCD (bias, PLU) et extraction de la photométrie 
       \item Réduction spectroscopique (bias, PLU) et automatisation de la calibration en
@@ -186,26 +186,26 @@
     }
     
     \cvitem{2016-2019}{Observatoire de Paris - GEPI (Doctorat)}{}{
-      Mise au point d'un Logiciel d'analyse et modélisation de photométrie et d'astrométrie par
+      Mise au point d'un logiciel d'analyse et modélisation de photométrie et d'astrométrie par
       déconvolution bayésienne :
       \begin{itemize}[noitemsep,nolistsep,leftmargin=*]
         \item Écriture de l'algorithme de déconvolution en Java (orienté objet), passage de
-          Ant/Ivy à Gradle pour la compilation et la gestion des dépendance, et de SVN à Git
+          Ant/Ivy à Gradle pour la compilation et la gestion des dépendances, et de SVN à Git
           pour la gestion de version et la collaboration
         \item Analyse et optimisation du code (Yourkit), évolution des algorithmes avec le
-          multithreading de Java, simplification du code la programmation
+          multithreading de Java, simplification du code avec la programmation
           fonctionnelle de Java 8 (temps CPU/10)
         \item Changement des formats de données, choix de HDF5 pour sa rapidité d'accès et sa
           compatibilité avec Java (JHDF5) et Python 3. Choix d'une base SQLite 3 pour
-          l'indexation des résultats (vitesse accées x100, occupation x0.5)
+          l'indexation des résultats (vitesse d'accès x100, occupation des disques x0,5)
         \item Rédaction d'une documentation, en Javadoc, spécifiant les besoins et les
           algorithmes 
-          \item Écriture des tests unitaire et non-régression (JUnit), automatisation des tests
-            et génération de la documentation avec GitlabCI, Gitlab Pages et docker.
-          \item Utilisation d'un Mesocentre et de SLURM pour test des versions et application
+          \item Écriture des tests unitaires et de non-régression (JUnit), automatisation des tests
+            et génération de la documentation avec GitlabCI, Gitlab Pages et Docker.
+          \item Utilisation d'un mésocentre et de SLURM pour les tests des versions et l'application
             de la version stable (400 000 hCPU)
-          \item Écriture du post-processing et de la visualisation en Python 3   avec  Numpy,
-            Scipy et Matplotlib (versionnage avec Git, tests unitaires avec Green).
+          \item Écriture du post-processing et de la visualisation en Python 3   avec  numpy,
+            scipy et matplotlib (versionnage avec Git, tests unitaires avec Green).
         \end{itemize}
       % - Conception et validation d'un algorithme d'analyse photométrique et astrométrique par déconvolution Bayésienne (Java OO, ant, graddle, svn, git)\\
       % - Documentation et tests unitaires (Javadoc, Junit)
@@ -218,8 +218,8 @@
     }
 
   \cvitem{Mars - Juillet 2016}{Institut d'Astrophysique de Paris}{}
-  {Conception et mise au point d'un modèle d'analyse par maximisation de vraissemblance et
-  chaine de Markov (Fortran ; openMPI ; python3 : matplotlib)}
+  {Conception et mise au point d'un modèle d'analyse par maximisation de vraisemblance et
+  chaîne de Markov (Fortran ; openMPI ; python3 : matplotlib)}
   % \cvitem{Avril - Juillet 2015}{Stage M1}{Observatoire de Paris - LERMA}
   % {Étude de l'impact des Quasars radio loud sur le milieu intergalactique à l'époque de la
   % réionisation}
@@ -228,12 +228,12 @@
 
 \cvsection{Responsabilités Administratives et Structurantes}
 \begin{cvtable}
-  \cvitemshort{2019}{Membre du comité de pilotage pour la réforme du Master 1 SUTS de
+  \cvitemshort{2019-2020}{Membre du comité de pilotage pour la réforme du Master 1 SUTS de
 l'Observatoire de Paris : 
 \begin{itemize}[noitemsep,nolistsep,leftmargin=*]
-  \item Définition des nouveau enseignement et programme
-    \item audition et choix des enseignant
-      \item bouclage de la plaquette pour la rentré 2020
+  \item Définition des nouveaux enseignements et programmes
+    \item Audition et choix des enseignants
+      \item Bouclage de la plaquette pour la rentrée 2020
 \end{itemize}
 }
   \cvitemshort{2017-2019}{Représentant des étudiants de l'Observatoire de
@@ -248,10 +248,11 @@ et au conseil de la documentation (CDOC)}
 \begin{cvtable}
 \cvitem{2021}{\textbf{Machine learning en python}}{CNRS - ifsem}{}
 \cvitem{2018}{\textbf{Docker}}{Observatoire de Paris - IN2P3}{}
-\cvitem{2017}{\textbf{Python Avancé}}{Observatoire de Paris}{}
+\cvitem{2017}{\textbf{Python avancé}}{Observatoire de Paris}{}
   \cvitem{2016-2019}{\textbf{Doctorat} (\href{https://tel.archives-ouvertes.fr/tel-02879238/document}{Manuscrit
   en ligne})}{Observatoire de Paris}{}
-  \cvitem{2014-2016}{Master}{Observatoire de Paris}{Dynamique des systèmes gravitationnels}
+  \cvitem{2014-2016}{Master}{Observatoire de Paris}{Astronomie, Astrophysique et Ingénierie
+  Spatiale}
   % \cvitem{2014-2015}{Master 1}{Observatoire de Paris}{Sciences de L'univers et technologies spatiales}
   % \cvitem{2011-2014}{Licence}{Université Lille 1}{Physique fondamentale}
 \end{cvtable}
@@ -283,19 +284,18 @@ et au conseil de la documentation (CDOC)}
   {}
 \end{cvtable}
 
-\cvsection{Expériences d'enseignement}
-\subsection{Universitaire}
+\cvsection{Expériences d'Enseignement}
+\subsection{Universitaires}
 \begin{cvtable}
-  \cvitem{2016-2020}{Cours Magistraux et Travaux dirigés}{Observatoire de Paris}{
+  \cvitem{2016-2020}{Cours magistraux et Travaux dirigés}{Observatoire de Paris}{
   Programmation Scientifique - Programmation Latex - Mécanique Quantique}
   
   \cvitem{2016-2020}{Stage d'observation}{Observatoire de Paris/Univ Paris-Saclay}
-  {- Encadrement d'observations sur instruments professionnels\\
-   - Développement de la boîte à outils de réduction des données et distribution en package
- python et image Docker}
+  {Encadrement d'observations à l'Observatoire de Haute Provence
+   }
 \end{cvtable}
 
-\subsection{Médiation scientifique}
+\subsection{Médiations scientifique}
 \begin{cvtable}
   \cvitem{2020}{\textbf{Conférence de Presse Gaia EDR3}}{\href{https://youtu.be/kOLjv-9lsmA?t=2145}
     {\underline{Com Obs.Paris}}}{}
